<resources>
    <string name="app_name">Anidot</string>
    <string name="appwidget_text">Random Facts</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Get random true but useless facts</string>
    <string name="app_widget_description_anime_facts">Get random facts about Anime</string>
    <string name="app_widget_description_anime_image">Get random anime image</string>
    <string name="update_fact">Update Fact</string>
    <string name="unable_to_fetch_facts">Unable to fetch facts!</string>
    <string name="update_interval_24_hour">Update interval: 24 hour</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="zero_percent">0%</string>
    <string name="preview_text">If one places a tiny amount of liquor on a scorpion, it will instantly go mad and sting itself to death.</string>
    <string name="background_image">Background Image</string>
    <string name="anime_image_category">Anime Image Category:</string>
    <string name="download_image">Download Image</string>
    <string name="factoid_settings">Anidot Settings</string>
    <string name="wallpaper">wallpaper</string>
    <string name="anime_image_source">Anime Image Source</string>
    <string name="image_download_and_refresh_button_position">Image download and refresh button position</string>
    <string name="nsfw">NSFW</string>
    <string name="cache_removal_off">Cache removal: Off</string>
    <string name="cache_removal_interval_1_day">Cache removal interval: 1 day</string>
</resources>