<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_shape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/widget_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarThumbVertical="@drawable/rounded_scrollbar"
            android:scrollbarSize="2dp"
            android:scrollbarStyle="outsideOverlay"
            android:divider="@null"
            />

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/unable_to_fetch_facts"
            android:textColor="@color/mode_inverse"
            android:visibility="gone" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/widget_refresh_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="3dp"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/mode_transparent"
        android:layout_gravity="bottom|end">

        <ImageView
            android:id="@+id/widget_refresh_button"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_reload"
            android:background="@android:color/transparent"
            android:contentDescription="@string/update_fact"
            android:tint="@color/mode_inverse"
            android:padding="2dp"
            android:hapticFeedbackEnabled="true"
            tools:ignore="UseAppTint" />

        <ProgressBar
            android:id="@+id/widget_refresh_progress"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

    <ImageView
        android:id="@+id/background_img"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:src="@drawable/anime_background"
        android:background="@android:color/transparent"
        android:contentDescription="@string/background_image"
        android:hapticFeedbackEnabled="true"
        android:elevation="-1dp"
        android:alpha="0.3"
        android:layout_gravity="center"
        tools:ignore="UseAppTint" />

</FrameLayout>